--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     <p>Here are some examples of what this website could look like:</p>
     <p>https://thelivingplanet.com/</p>
     <p>https://sandiegozoowildlifealliance.org/</p>
-    <p>Pages: Plan your visit, Animals, Events, Education, Conservation, About Us</p>
+    <ul>Pages:
+      <li>Home (Briana): brief explanation of what the herpetarium is, links to other pages</li>
+      <li>Plan your visit: Hours and Events. Could also include membership deals and reservation options.</li>
+      <li>Animals (Louisa): Shows the animals in our zoo, and some of the exhibits. We could have themes like desert, rainforest, lakes and streams, under the sea, etc.</li>
+      <li>Education: Resources for teachers, info about conservation efforts, etc. </li>
+    </ul>
 
 
     <!--Footer-->
