--- a/index.html
+++ b/index.html
@@ -1,50 +1,83 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css" />
-    <title>Herpetarium</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css" />
+  <title>Herpetarium</title>
 </head>
+
 <body>
 
-    <!---Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Herpetarium</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Visit</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Animals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Education</a>
-              </li>
-          </ul>
-        </div>
-    </nav>
+  <!---Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Herpetarium</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Visit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Animals</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Education</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <body>
+    <div style="background-image: url('/images/background.jpg');">
+      <br />
+      <h1 id="wordsOnImage" style="text-align: center;">HIGHLAND HERPETARIUM</h1>
+      <br />
+    </div>
+
+
+    <div class="row">
+      <div class="column">
+        <a href="/pages/animals.html">
+          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/sea_turtle.jpg" />
+        </a>
+        <h2 align="center">Our Animals</h2>
+      </div>
+      <div class="column">
+        <a href="/pages/schedule.html">
+          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/people.jpg" />
+        </a>
+        <h2 align=center>Plan Your Visit</h2>
+      </div>
+      <div class="column">
+        <a href="/pages/education.html">
+          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/boa_night.jpg" />
+        </a>
+        <h2 align="center">Learn More</h2>
+      </div>
+    </div>
+    <br />
+    <br />
+  </body>
+
+  <!--Footer-->
+  <footer>
+    <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
+    <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB: Louisa and Briana King</a></div>
+  </footer>
 
 
 
-    <!--Footer-->
-    <footer>
-        <div class="company-name">&#169; HIGHLAND HERPETARIUM</div>
-        <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB</a></div>
-    </footer>
 
-
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
