linked to deserts

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -42,7 +42,7 @@
     
     <div class="row">
       <div class="column">
-        <div class="img" style="background-image:url('/images/gila_monster.jpg')"></div>
+        <div class="img" style="background-image:url('/images/gila_monster.jpg')"><a href="animals.html#deserts"></a></div>
         <div class="img-text"><h2>Deserts</h2></div>
       </div>
       <div class="column">
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <div class="heading_2">
+    <div id="deserts" class="heading_2">
       <div class="heading-img" style="background-image:url('/images/background_salamander.jpg')"></div>
       <div class="heading-text"><h1>DESERTS</h1></div>
     </div>
