--- a/index.html
+++ b/index.html
@@ -45,27 +45,21 @@
     <div class="row">
       <div class="column">
         <div class="img" style="background-image:url('/images/sea_turtle.jpg')"><a href="/pages/animals.html"></a></div>
-        <div class="img-text"><h2>Our Animals</h2></div>
-        <!-- <a href="/pages/animals.html">
-          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/sea_turtle.jpg" />
-        </a>
-        <h2 align="center">Our Animals</h2> -->
+        <div class="img-text">
+          <h2>Our Animals</h2>
+        </div>
       </div>
       <div class="column">
         <div class="img" style="background-image:url('/images/people.jpg')"><a href="/pages/schedule.html"></a></div>
-        <div class="img-text"><h2>Plan Your Visit</h2></div>
-        <!-- <a href="/pages/schedule.html">
-          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/people.jpg" />
-        </a>
-        <h2 align=center>Plan Your Visit</h2> -->
+        <div class="img-text">
+          <h2>Plan Your Visit</h2>
+        </div>
       </div>
       <div class="column">
         <div class="img" style="background-image:url('/images/boa_night.jpg')"><a href="pages/education.html"></a></div>
-        <div class="img-text"><h2>Learn More</h2></div>
-        <!-- <a href="/pages/education.html">
-          <img style="height: 100%; width: 100%; object-fit: contain" src="/images/boa_night.jpg" />
-        </a>
-        <h2 align="center">Learn More</h2> -->
+        <div class="img-text">
+          <h2>Learn More</h2>
+        </div>
       </div>
     </div>
     <br />
@@ -77,8 +71,6 @@
     <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
     <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB: Louisa and Briana King</a></div>
   </footer>
-
-
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
