Adding page break

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/pages/animals.html">Animals</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/education.html">Education</a>
+          <a class="nav-link" href="/pages/education.html">Conservation</a>
         </li>
       </ul>
     </div>
@@ -58,7 +58,7 @@
       <div class="column">
         <div class="img" style="background-image:url('/images/boa_night.jpg')"><a href="pages/education.html"></a></div>
         <div class="img-text">
-          <h2>Learn More</h2>
+          <h2>Conservation</h2>
         </div>
       </div>
     </div>
