--- a/pages/animals.html
+++ b/pages/animals.html
@@ -1,44 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< Updated upstream
-  <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css" />
-    <title>Herpetarium</title>
-  </head>
-  <body>
-
-    <!---Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Herpetarium</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Visit</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/pages/animals.html">Animals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Education</a>
-              </li>
-          </ul>
-        </div>
-    </nav>
-
-    <!---Top Header-->
-    <div class="heading" style="background-image: url('/images/background.jpg');">
-      <br>
-      <h1 id="wordsOnImage" style="text-align: center;">ANIMAL HABITATS</h1>
-      <br> 
-=======
 
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -70,7 +31,6 @@
           <a class="nav-link" href="#">Education</a>
         </li>
       </ul>
->>>>>>> Stashed changes
     </div>
   </nav>
 
@@ -123,7 +83,7 @@
       </div>
     </div>
   </div>
-
+  <hr />
   <div id="deserts" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_salamander.jpg')"></div>
     <div class="heading-text">
@@ -133,6 +93,7 @@
 
   <div class="row">
     <div class="animal-column">
+      <!-- style="padding: 5%" To vwetically align  -->
       <h2>Western diamondback rattlesnake</h2>
       <h3>Crotalus atrox</h3>
       <ul>
