Added desert animals

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -35,10 +35,10 @@
   </nav>
 
   <!---Top Header-->
-  <div class="heading" style="background-image: url('/images/background.jpg');">
-    <br>
+  <div class="heading-container" style="background-image: url('/images/background.jpg');">
+    <br />
     <h1 id="wordsOnImage" style="text-align: center;">ANIMAL HABITATS</h1>
-    <br>
+    <br />
   </div>
 
 
@@ -93,9 +93,9 @@
 
   <div class="row">
     <div class="animal-column">
-      <!-- style="padding: 5%" To vwetically align  -->
       <h2>Western diamondback rattlesnake</h2>
-      <h3>Crotalus atrox</h3>
+      <h4>Crotalus atrox</h4>
+      <p>Range: Southwestern United States and Northern Mexico</p>
       <ul>
         <li>These snakes have a heat sensing pit located behind each nostril that can detect differences in temperature.</li>
         <li>Aside from deserts, rattlesnakes can live in grasslands, forests, rocky hillsides and along the coast.</li>
@@ -104,8 +104,45 @@
     <div class="animal-column">
       <img src="/images/rattlesnake.jpg">
     </div>
-    <hr>
   </div>
+  <hr class=sep-animals>
+
+  <div class="row">
+    <div class="animal-column">
+      <h2>Texas Horned Lizard</h2>
+      <h4>Phrynosoma cornutum</h4>
+      <p>Range: Southern-Central United States and Mexico</p>
+      <ul>
+        <li>These lizards are often called Horned toads because their flattened and rounded body makes them appear toad-like.</li>
+        <li>They feed primarily on red ants.</li>
+        <li>A horned lizard can inflate itself to appear more menacing and can shoot a stream of blood from its eyelid at predators.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/horned_lizard.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row">
+    <div class="animal-column">
+      <h2>Couch's Spadefoot</h2>
+      <h4>Scaphiopus couchii</h4>
+      <p>Range: Southern United States and Northern Mexico</p>
+      <ul>
+        <li>On its hindfeet, there is a sickle-shaped spade made from keratin, which helps the Spadefoot to burrow into the earth.</li>
+        <li>They feed primarily on red ants.</li>
+        <li>Adults emerge from the soil to breed when they sense the low frequency vibrations caused by rain and thunder.</li>
+        <li>The Spadefoot lays its eggs in pools formed by rain.</li>
+        <li>The pools dry out quickly in the desert heat, so the early life stages must happen quickly. Eggs can hatch after just 15 hours, and tadpoles metamorphosize after as little as 9 days.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/couch.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
 
 
   <!--Footer-->
