Added more animals

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="column">
-      <div class="img" style="background-image:url('/images/sea_turtle_beach.jpg')"></div>
+      <div class="img" style="background-image:url('/images/sea_turtle_beach.jpg')"><a href="animals.html#oceans"></a></div>
       <div class="img-text">
         <h2>Islands and Coasts</h2>
       </div>
@@ -84,14 +84,15 @@
     </div>
   </div>
   <hr />
+
   <div id="deserts" class="heading_2">
-    <div class="heading-img" style="background-image:url('/images/background_salamander.jpg')"></div>
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
     <div class="heading-text">
       <h1>DESERTS</h1>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row animal">
     <div class="animal-column">
       <h2>Western diamondback rattlesnake</h2>
       <h4>Crotalus atrox</h4>
@@ -107,7 +108,7 @@
   </div>
   <hr class=sep-animals>
 
-  <div class="row">
+  <div class="row animal">
     <div class="animal-column">
       <h2>Texas Horned Lizard</h2>
       <h4>Phrynosoma cornutum</h4>
@@ -124,7 +125,7 @@
   </div>
   <hr class=sep-animals>
 
-  <div class="row">
+  <div class="row animal">
     <div class="animal-column">
       <h2>Couch's Spadefoot</h2>
       <h4>Scaphiopus couchii</h4>
@@ -143,6 +144,29 @@
   </div>
   <hr class=sep-animals>
 
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Southern Shovel-nosed Snake</h2>
+      <h4>Brachyurophis semifasciatus</h4>
+      <p>Range: Southern Australia</p>
+      <ul>
+        <li>Feeds on lizards and the eggs of other snakes.</li>
+        <li>Its receded lower jaw and smooth, thin body allows this snake to quickly burrow and "swim" through sand.</li>
+        <li>Lives on sand dunes and in arid woodlands.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/shovel_snake.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div id="oceans" class="heading_2">
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
+    <div class="heading-text">
+      <h1>ISLANDS AND COASTS</h1>
+    </div>
+  </div>
 
 
   <!--Footer-->
