--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -11,7 +11,7 @@
 
   <!---Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Herpetarium</a>
+    <a class="navbar-brand" href="/../index.html">Herpetarium</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/schedule.html">Visit</a>
@@ -41,11 +41,55 @@
       <br />
     </div>
 
-    <!-- Halloween event for week of Halloween
-         Youth group Night
-         Venue Reservation
-
-         Tickets: Adult: $35, Teen/Student: $20, Kids: $15, Group of 30: $12-->
+    <div class="row">
+      <div class="column">
+        <div class="img" style="background-image:url('/images/background_sea_turtle.jpg')"></div>
+        <div class="img-text" id="tickets">
+          <h1> Tickets </h1>
+          <h2>Adults: $35</h2>
+          <h2>Students: $20</h2>
+          <h2>Kids: $15</h2>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <h1 style="text-align:center">Upcoming Events</h1>
+    <div class="row">
+      <div class="event-column">
+        <div>
+          <img src="/images/lizardInPumpkin.jpg" />
+        </div>
+      </div>
+      <div class="event-column">
+        <h2><u>Halloween Special</u></h2>
+        <h4><em>October 15-31</em></h4>
+        <p>Tickets are half-priced for this spooky event</p>
+      </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="event-column">
+        <div>
+          <h2><u>Youth Night Special</u></h2>
+          <p>Youth Groups get in for the price of $10 per youth</p>
+        </div>
+      </div>
+      <div class="event-column">
+        <img src="/images/childrenWithSnake.jpg" />
+      </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="event-column">
+        <div>
+          <img src="/images/herpetarium_rental.jpg" />
+        </div>
+      </div>
+      <div class="event-column">
+        <h2><u>Venue Reservations</u></h2>
+        <p>Reserve the Herpetrium for $250 and hour</p>
+      </div>
+    </div>
 
     <!--Footer-->
     <footer>
