--- a/pages/animals.html
+++ b/pages/animals.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="column">
-      <div class="img" style="background-image:url('/images/toad_climbing.jpg')"></div>
+      <div class="img" style="background-image:url('/images/toad_climbing.jpg')"><a href="animals.html#mountains"></a></div>
       <div class="img-text">
         <h2>Mountains</h2>
       </div>
@@ -65,7 +65,7 @@
 
   <div class="row">
     <div class="column">
-      <div class="img" style="background-image:url('/images/frog_swimming.jpg')"></div>
+      <div class="img" style="background-image:url('/images/frog_swimming.jpg')"><a href="animals.html#freshwater"></a></div>
       <div class="img-text">
         <h2>Lakes and Streams</h2>
       </div>
@@ -159,12 +159,133 @@
       <img src="/images/shovel_snake.jpg">
     </div>
   </div>
-  <hr class=sep-animals>
+
 
   <div id="oceans" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
     <div class="heading-text">
       <h1>ISLANDS AND COASTS</h1>
+    </div>
+  </div>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Leatherback turtle</h2>
+      <h4>Dermochelys coriacea</h4>
+      <p>Range: All tropical and subtropical oceans</p>
+      <ul>
+        <li>The leatherback is the largest of all turtles, weighing over 2,000 pounds and growing up to 6 feet long.</li>
+        <li>The leatherback is the only turtle species that lack scales and a hard shell, instead they are covered in rubbery skin.</li>
+        <li>Leatherbacks migrate long distances each year, with some traveling over 10,000 miles. They can also dive to a depth of nearly 4,000 feet.</li>
+        <li>Female leatherbacks come ashore at night to dig deep nests in which they lay about 100 eggs.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/leatherback_turtle.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Banded Sea Krait</h2>
+      <h4>Laticauda colubrina</h4>
+      <p>Range: Reefs in the Indian and Pacific oceans</p>
+      <ul>
+        <li>These sea snakes can hold their breath for 15-30 minutes while hunting.</li>
+        <li>Despite being smaller than the eels they prey on, the snakes swallow their prey whole.</li>
+        <li>While they hunt underwater, the snakes come ashore to nest, digest their food, and shed their skin.</li>
+        <li>Kraits belong to the cobra family, and are highly venomous.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/sea_snake.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Komodo dragon</h2>
+      <h4>Varanus komodoensis</h4>
+      <p>Range: Southern Indonesian Islands</p>
+      <ul>
+        <li>Komodo dragons are the largest lizards, and will eat large prey such as goats, monkeys, boars, deer, and each other.</li>
+        <li>The Komodo dragon's mouth contains over 50 species of bacteria, at least 7 of which are septic. 
+          These dangerous bacteria, along with the dragon'  s own venom, will slowly kill prey that the dragon has bitten. 
+          The venom keeps blood from clotting, leading to massive blood loss. 
+          It can take four days for the animal to die, during which time the dragon continually tracks its quarry.</li>
+        <li>A dragon can eat up to 80% of its own body weight in a single meal. If threatened, the dragon will throw up to allow it to quickly run away.</li>
+        <li>To avoid being cannibalized by older dragons, the young will roll themselves in fecal material to stay undetected. </li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/komodod_dragon.jpg">
+    </div>
+  </div>
+
+
+  <div id="mountains" class="heading_2">
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
+    <div class="heading-text">
+      <h1>MOUNTAINS</h1>
+    </div>
+  </div>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Pebble toad</h2>
+      <h4>Oreophrynella nigra</h4>
+      <p>Range: Venezuala</p>
+      <ul>
+        <li>When confronted by a predator, the toad will tense its muscles, going stiff. 
+          Due to its mountainous habitat, it will usually be on an incline when this happens, so it can roll down the mountain to safety.</li>
+        <li>The frogs are no more than a few centimeters long, allowing them to roll and bounce down the mountain without injury.</li>
+        <li>The frog has not evolved to excel at jumping, so it can only hop about an inch. </li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/pebble_toad.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Cape girdled lizard</h2>
+      <h4>Cordylus cordylus</h4>
+      <p>Range: Southern Africa</p>
+      <ul>
+        <li>These lizards live in colonies on mountain summits and rocky outcrops.</li>
+        <li>When threatened, the lizards will wedge themselves into holes and cracks in the rocks, and cover their faces with their thorny tails.</li>
+        <li>They rush and pounce to catch their prey, which consists primarily of insects.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/girdled_lizard.jpg">
+    </div>
+  </div>
+
+  <div id="freshwater" class="heading_2">
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
+    <div class="heading-text">
+      <h1>LAKES AND STREAMS</h1>
+    </div>
+  </div>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Gharial</h2>
+      <h4>Gavialis gangeticus</h4>
+      <p>Range: Nepal, Northern India</p>
+      <ul>
+        <li>The large bump at the end of the snout acts as a voice resonator, which creates a loud buzzing when the gharial calls.</li>
+        <li>The largest gharials can be up to 20 feet long.</li>
+        <li>Gharials feed on fish and frogs, while the juveniles hunt insects.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/gharial_scary.jpg">
     </div>
   </div>
 
