Added more animals

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -71,13 +71,13 @@
       </div>
     </div>
     <div class="column">
-      <div class="img" style="background-image:url('/images/tree_python.jpg')"></div>
+      <div class="img" style="background-image:url('/images/tree_python.jpg')"><a href="animals.html#rainforests"></a></div>
       <div class="img-text">
         <h2>Rainforests</h2>
       </div>
     </div>
     <div class="column">
-      <div class="img" style="background-image:url('/images/tortoise_explore.jpg')"></div>
+      <div class="img" style="background-image:url('/images/tortoise_explore.jpg')"><a href="animals.html#forests"></a></div>
       <div class="img-text">
         <h2>Temperate Forests</h2>
       </div>
@@ -286,6 +286,93 @@
     </div>
     <div class="animal-column">
       <img src="/images/gharial_scary.jpg">
+    </div>
+  </div>
+
+  <div id="rainforests" class="heading_2">
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
+    <div class="heading-text">
+      <h1>RAINFORESTS</h1>
+    </div>
+  </div>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Reticulated glass frog</h2>
+      <h4>Hyalinobatrachium valerioi</h4>
+      <p>Range: Panama, Colombia, Costa Rica, and Equador</p>
+      <ul>
+        <li>The skin on the frog's underside is see-through, so the frog's organs can be observed through the skin.</li>
+        <li>Males take care of the eggs until they hatch.</li>
+        <li>The pattern on the frog's back seems to resemble its eggs. 
+          Predatory wasps are confused by the display, and attack the frogs rather than the eggs. The protective parent then kicks the wasps away. </li>
+        <li>Frog embryos that are nearing maturity sense when the egg cluster is under attack, and can wriggle out prematurely to escape to the water down below.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/glass_frog.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Green Crested Basilisk</h2>
+      <h4>Basiliscus plumifrons</h4>
+      <p>Range: Central America</p>
+      <ul>
+        <li>To escape predators, the basilisk can run short distances on the surface of water. </li>
+        <li>To do this, the basilisk can reach speeds of up to 7 mph.</li>
+        <li>The long toes and hydrophobic scales on the basilisk's feet help keep it from sinking.</li>
+        <li>When it eventually sinks, the basilisk can stay under the water for up to 10 minutes while the danger passes.</li>
+        <li>Basilisks eat insects, crawfish, and small mammals. </li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/basilisk.jpg">
+    </div>
+  </div>
+
+  <div id="forests" class="heading_2">
+    <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
+    <div class="heading-text">
+      <h1>TEMPERATE FORESTS</h1>
+    </div>
+  </div>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Common Five-lined Skink</h2>
+      <h4>Plestiodon fasciatus</h4>
+      <p>Range: Northeastern United States and Canada</p>
+      <ul>
+        <li>Skinks can readily shed their tails to escape predators, and the tail can regrow in about 5 weeks.</li>
+        <li>Females stay with the eggs until they hatch, eating any of the eggs that have gone bad.</li>
+        <li>Adults are colored brown or olive, and the male's head turns bright orange in mating season. 
+          Juveniles are colored black, and this difference in coloration ensures that they are not attacked by breeding males.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/skink.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Frilled lizard</h2>
+      <h4>Chlamydosaurus kingii</h4>
+      <p>Range: Northern Australia</p>
+      <ul>
+        <li>When threatened, the lizard will raise its frill and hiss. If this doesn’t work, it has long claws that help it quickly scale trees.</li>
+        <li>The lizard can reach speeds of 30 mph over short distances. They are nicknamed bicycle lizards due to their bipedal running form.</li>
+        <li>The lizards also raise or lower their frill to control their body temperature.</li>
+        <li>They are ambush hunters, and eat insects and small mammals.</li>
+        <li>Contrary to popular belief, the lizards are not venomous, and do not spit at their predators.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/frilled_lizard.jpg">
     </div>
   </div>
 
