--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!--Footer-->
   <footer>
     <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
-    <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB: Louisa and Briana King</a></div>
+    <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB: Louisa Dayton and Briana King</a></div>
   </footer>
 
 
