--- a/pages/animals.html
+++ b/pages/animals.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Visit</a>
+          <a class="nav-link" href="/pages/schedule.html">Visit</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/pages/animals.html">Animals</a>
@@ -211,9 +211,9 @@
       <p>Range: Southern Indonesian Islands</p>
       <ul>
         <li>Komodo dragons are the largest lizards, and will eat large prey such as goats, monkeys, boars, deer, and each other.</li>
-        <li>The Komodo dragon's mouth contains over 50 species of bacteria, at least 7 of which are septic. 
-          These dangerous bacteria, along with the dragon'  s own venom, will slowly kill prey that the dragon has bitten. 
-          The venom keeps blood from clotting, leading to massive blood loss. 
+        <li>The Komodo dragon's mouth contains over 50 species of bacteria, at least 7 of which are septic.
+          These dangerous bacteria, along with the dragon' s own venom, will slowly kill prey that the dragon has bitten.
+          The venom keeps blood from clotting, leading to massive blood loss.
           It can take four days for the animal to die, during which time the dragon continually tracks its quarry.</li>
         <li>A dragon can eat up to 80% of its own body weight in a single meal. If threatened, the dragon will throw up to allow it to quickly run away.</li>
         <li>To avoid being cannibalized by older dragons, the young will roll themselves in fecal material to stay undetected. </li>
@@ -238,7 +238,7 @@
       <h4>Oreophrynella nigra</h4>
       <p>Range: Venezuala</p>
       <ul>
-        <li>When confronted by a predator, the toad will tense its muscles, going stiff. 
+        <li>When confronted by a predator, the toad will tense its muscles, going stiff.
           Due to its mountainous habitat, it will usually be on an incline when this happens, so it can roll down the mountain to safety.</li>
         <li>The frogs are no more than a few centimeters long, allowing them to roll and bounce down the mountain without injury.</li>
         <li>The frog has not evolved to excel at jumping, so it can only hop about an inch. </li>
@@ -304,7 +304,7 @@
       <ul>
         <li>The skin on the frog's underside is see-through, so the frog's organs can be observed through the skin.</li>
         <li>Males take care of the eggs until they hatch.</li>
-        <li>The pattern on the frog's back seems to resemble its eggs. 
+        <li>The pattern on the frog's back seems to resemble its eggs.
           Predatory wasps are confused by the display, and attack the frogs rather than the eggs. The protective parent then kicks the wasps away. </li>
         <li>Frog embryos that are nearing maturity sense when the egg cluster is under attack, and can wriggle out prematurely to escape to the water down below.</li>
       </ul>
@@ -348,7 +348,7 @@
       <ul>
         <li>Skinks can readily shed their tails to escape predators, and the tail can regrow in about 5 weeks.</li>
         <li>Females stay with the eggs until they hatch, eating any of the eggs that have gone bad.</li>
-        <li>Adults are colored brown or olive, and the male's head turns bright orange in mating season. 
+        <li>Adults are colored brown or olive, and the male's head turns bright orange in mating season.
           Juveniles are colored black, and this difference in coloration ensures that they are not attacked by breeding males.</li>
       </ul>
     </div>
