--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -50,6 +50,7 @@
           <h2>Students: $20</h2>
           <h2>Kids: $15</h2>
         </div>
+        <h2>Sun-Sat 12:00pm-11:30pm</h2>
       </div>
     </div>
     <hr />
@@ -71,6 +72,7 @@
       <div class="event-column">
         <div>
           <h2><u>Youth Night Special</u></h2>
+          <h4><em>Every Wednesday</em></h4>
           <p>Youth Groups get in for the price of $10 per youth</p>
         </div>
       </div>
@@ -87,14 +89,14 @@
       </div>
       <div class="event-column">
         <h2><u>Venue Reservations</u></h2>
-        <p>Reserve the Herpetrium for $250 and hour</p>
+        <p>Reserve the Herpetrium for $250 an hour</p>
       </div>
     </div>
 
     <!--Footer-->
     <footer>
       <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
-      <div class="github-info"><a href="https://github.com/BYUCS260/lab-1-photography-website-louisadayton ">GITHUB: Louisa and Briana King</a></div>
+      <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1 ">GITHUB: Louisa and Briana King</a></div>
     </footer>
 
 
