--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -89,7 +89,7 @@
       </div>
       <div class="event-column">
         <h2><u>Venue Reservations</u></h2>
-        <p>Reserve the Herpetrium for $250 an hour</p>
+        <p>Reserve the Herpetarium for $250 an hour</p>
       </div>
     </div>
 
