--- a/pages/animals.html
+++ b/pages/animals.html
@@ -87,7 +87,7 @@
 
   <div id="deserts" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:30%">
       <h1>DESERTS</h1>
     </div>
   </div>
@@ -227,7 +227,7 @@
 
   <div id="mountains" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:30%">
       <h1>MOUNTAINS</h1>
     </div>
   </div>
@@ -268,7 +268,7 @@
 
   <div id="freshwater" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:18%">
       <h1>LAKES AND STREAMS</h1>
     </div>
   </div>
@@ -291,7 +291,7 @@
 
   <div id="rainforests" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:30%">
       <h1>RAINFORESTS</h1>
     </div>
   </div>
@@ -335,7 +335,7 @@
 
   <div id="forests" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:18%">
       <h1>TEMPERATE FORESTS</h1>
     </div>
   </div>
