Adding Fixing footer

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -297,7 +297,7 @@
       <p>Range: Amazon Basin and Northern South America</p>
       <ul>
         <li>Matamatas have poor eyesight, but bumps on the head and barbels
-           on the chin contain nerves that help the turtle sense vibrations in the water.</li>
+          on the chin contain nerves that help the turtle sense vibrations in the water.</li>
         <li>The strange shape and coloration of the turtle seem to disguise it as a piece of floating bark.</li>
         <li>The Matamata eggs have an extremely long incubation period of 200 days.</li>
         <li>Matamatas are bottom feeders that suck up worms and invertebrates like a vacuum cleaner.</li>
@@ -315,9 +315,9 @@
       <h4>Lithobates catesbeianus</h4>
       <p>Range: Eastern Mexico, Canada, and United States</p>
       <ul>
-        <li>Bullfrogs are extremely aggressive, and will eat almost anything they can fit in their mouths. 
+        <li>Bullfrogs are extremely aggressive, and will eat almost anything they can fit in their mouths.
           This includes scorpions, small mammals, turtles, birds, and each other.</li>
-        <li>The frogs were brought to Europe for food and as pets, but their extreme aggression and adaptability 
+        <li>The frogs were brought to Europe for food and as pets, but their extreme aggression and adaptability
           has allowed them to become an invasive species in many parts of Europe and the western United States.</li>
         <li>Bullfrog tadpoles do not taste good to many would-be predators, so predators will often spit the tadpoles back out.</li>
         <li>Bullfrogs are thought to be one potential carrier of the chytrid fungus, which has decimated amphibian populations worldwide.</li>
@@ -419,7 +419,7 @@
   <!--Footer-->
   <footer>
     <div class="company-name">&#169; HIGHLAND HERPETARIUM</div>
-    <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1">GITHUB</a></div>
+    <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1">GITHUB: Louisa Dayton and Briana King</a></div>
   </footer>
 
 
