--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -18,10 +18,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/pages/schedule.html">Visit</a>
         </li>
         <li class="nav-item">
@@ -96,7 +96,7 @@
     <!--Footer-->
     <footer>
       <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
-      <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1 ">GITHUB: Louisa and Briana King</a></div>
+      <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1 ">GITHUB: Louisa Dayton and Briana King</a></div>
     </footer>
 
 
