--- a/pages/education.html
+++ b/pages/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Conservation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
@@ -31,8 +31,65 @@
         </div>
     </nav>
 
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <div class="heading" style="background-image: url('/images/background.jpg');">
+        <br />
+        <h1 id="wordsOnImage" style="text-align: center;">CONSERVATION EFFORTS</h1>
+        <br />
+    </div>
+
+    <div class="heading_2" style="height:710px; width:100%;">
+        <div class="heading-img" style="background-image:url('/images/sea_turtle_baby.jpg')"></div>
+        <div class="heading-text" style="top:15%;">
+          <h1 style="font-size:7vw;">SEA TURTLE CONSERVATION</h1>
+        </div>
+    </div>
+
+    <div class="row animal">
+        <div class="animal-column" style="line-height:2.3em;">
+          <h2 style="line-height:2.3em;">Why are sea turtles endangered?</h2>
+          <h6 style="line-height:2.3em;">The IUCN has identified five major contributers to sea turtle endangerment:</h6>
+          <ul style="line-height:2.3em;">
+            <li><b>Fisheries: </b>Fishing can negatively impact the food web, destroy sea turtle habitats, and kill sea turtles that get entangled in nets.</li>
+            <li><b>Hunting: </b>Sea turtles and their eggs are hunted throughout the world.</li>
+            <li><b>Development: </b>Development such as seafloor dredging and coastal construction alters and even destroys sea turtle habitats and nesting areas.</li>
+            <li><b>Pollution: </b>Sea turtles can die from ingesting or being tangled in pollutants. Light pollution disrupts nesting patterns and leads baby sea
+            turtles away from the sea.</li>
+            <li><b>Climate Change: </b>Climate change will cause damage to sea turtle habitats and populations.</li>
+          </ul>
+          <p style="font-size:10px;"><i>Sources: Caribbean Conservation Corporation and Todd Steiner, Sea Turtle Restoration Project</i></p>
+        </div>
+        <div class="animal-column">
+          <img src="/images/sea_turtle_birds_eye.jpg" style="width:77%">
+        </div>
+    </div>
+    <hr class=sep-animals>
+
+    <div class="row animal">
+        <div class="animal-column">
+            <img src="/images/sea_turtle_baby_2.jpg" style="width:77%">
+        </div>
+        <div class="animal-column" style="line-height:2.3em; padding-left:0px; padding-right:60px">
+            <h2 style="line-height:2.3em;">Do Your Part: Clean Up</h2>
+            <h6 style="line-height:2.3em;">Pollutants are one of the main causes of preventable sea turtle deaths. 
+                Here are some things you can do to help out our flippery friends:</h6>
+            <ul style="line-height:2.3em; padding-left:35px; padding-right:25px;">
+            <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
+                Specific dates and times will be posted on our <a href="schedule.html">Events Page</a>.
+            </li>
+            <li>Clean up after yourself. Do your part to leave the beach cleaner than when you came. Look out for debris that could 
+                entangle or be eaten by sea turtles. Fill in holes and kick down sand castles before you leave, as they can become 
+                obstacles for baby sea turtle trying to reach the ocean.
+            </li>
+            <li>Turn off or take down lights that are visible from the ocean. Inland lights can disorient baby sea turtles, and they can die if they 
+                crawl away from the ocean.
+            </li>
+            <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation.</li>
+          </ul>
+        </div>
+    </div>
+    <hr class=sep-animals>
+
+    
 
     <!--Footer-->
     <footer>
