--- a/pages/education.html
+++ b/pages/education.html
@@ -71,7 +71,7 @@
         <div class="animal-column" style="line-height:2.3em; padding-left:0px; padding-right:60px">
             <h2 style="line-height:2.3em;">Do Your Part: Clean Up</h2>
             <h6 style="line-height:2.3em;">Pollutants are one of the main causes of preventable sea turtle deaths. 
-                Here are some things you can do to help out our flippery friends:</h6>
+                Here are some things you can do to help protect our flippery friends:</h6>
             <ul style="line-height:2.3em; padding-left:35px; padding-right:25px;">
             <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
                 Specific dates and times will be posted on our <a href="schedule.html">Events Page</a>.
