Sea turtle conservation

--- a/pages/education.html
+++ b/pages/education.html
@@ -69,7 +69,7 @@
             <img src="/images/sea_turtle_baby_2.jpg" style="width:77%">
         </div>
         <div class="animal-column" style="line-height:2.3em; padding-left:0px; padding-right:60px">
-            <h2 style="line-height:2.3em;">Do Your Part: Clean Up</h2>
+            <h2 style="line-height:2.3em;">Do Your Part</h2>
             <h6 style="line-height:2.3em;">Pollutants are one of the main causes of preventable sea turtle deaths. 
                 Here are some things you can do to help protect our flippery friends:</h6>
             <ul style="line-height:2.3em; padding-left:35px; padding-right:25px;">
@@ -83,7 +83,9 @@
             <li>Turn off or take down lights that are visible from the ocean. Inland lights can disorient baby sea turtles, and they can die if they 
                 crawl away from the ocean.
             </li>
-            <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation.</li>
+            <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation. Write to your representatives in Congress
+                to influence legislation that influences sea habitats.
+            </li>
           </ul>
         </div>
     </div>
