Sea turtle conservation

--- a/pages/education.html
+++ b/pages/education.html
@@ -70,7 +70,7 @@
         </div>
         <div class="animal-column" style="line-height:2.3em; padding-left:0px; padding-right:60px">
             <h2 style="line-height:2.3em;">Do Your Part</h2>
-            <h6 style="line-height:2.3em;">Pollutants are one of the main causes of preventable sea turtle deaths. 
+            <h6 style="line-height:2.3em;">Human activity is the main cause of preventable sea turtle deaths. 
                 Here are some things you can do to help protect our flippery friends:</h6>
             <ul style="line-height:2.3em; padding-left:35px; padding-right:25px;">
             <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
@@ -84,7 +84,7 @@
                 crawl away from the ocean.
             </li>
             <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation. Write to your representatives in Congress
-                to influence legislation that influences sea habitats.
+                encouraging them to support legislation that protects sea habitats.
             </li>
           </ul>
         </div>
