added more animals

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -18,10 +18,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/pages/schedule.html">Visit</a>
         </li>
         <li class="nav-item">
@@ -89,7 +89,7 @@
       </div>
       <div class="event-column">
         <h2><u>Venue Reservations</u></h2>
-        <p>Reserve the Herpetrium for $250 an hour</p>
+        <p>Reserve the Herpetarium for $250 an hour</p>
       </div>
     </div>
 
