--- a/pages/animals.html
+++ b/pages/animals.html
@@ -288,6 +288,45 @@
       <img src="/images/gharial_scary.jpg">
     </div>
   </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Matamata turtle</h2>
+      <h4>Chelus fimbriatus</h4>
+      <p>Range: Amazon Basin and Northern South America</p>
+      <ul>
+        <li>Matamatas have poor eyesight, but bumps on the head and barbels
+           on the chin contain nerves that help the turtle sense vibrations in the water.</li>
+        <li>The strange shape and coloration of the turtle seem to disguise it as a piece of floating bark.</li>
+        <li>The Matamata eggs have an extremely long incubation period of 200 days.</li>
+        <li>Matamatas are bottom feeders that suck up worms and invertebrates like a vacuum cleaner.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/matamata_turtle.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>American Bullfrog</h2>
+      <h4>Lithobates catesbeianus</h4>
+      <p>Range: Eastern Mexico, Canada, and United States</p>
+      <ul>
+        <li>Bullfrogs are extremely aggressive, and will eat almost anything they can fit in their mouths. 
+          This includes scorpions, small mammals, turtles, birds, and each other.</li>
+        <li>The frogs were brought to Europe for food and as pets, but their extreme aggression and adaptability 
+          has allowed them to become an invasive species in many parts of Europe and the western United States.</li>
+        <li>Bullfrog tadpoles do not taste good to many would-be predators, so predators will often spit the tadpoles back out.</li>
+        <li>Bullfrogs are thought to be one potential carrier of the chytrid fungus, which has decimated amphibian populations worldwide.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/bullfrog.jpg">
+    </div>
+  </div>
 
   <div id="rainforests" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
