--- a/pages/education.html
+++ b/pages/education.html
@@ -8,7 +8,7 @@
 <body>
         <!---Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Herpetarium</a>
+        <a class="navbar-brand" href="/../index.html">Herpetarium</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
