--- a/pages/animals.html
+++ b/pages/animals.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/pages/animals.html">Animals</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
+          <a class="nav-link" href="/pages/education.html">Conservation</a>
         </li>
       </ul>
     </div>
