--- a/pages/education.html
+++ b/pages/education.html
@@ -39,7 +39,7 @@
 
     <div class="heading_2" style="height:710px; width:100%;">
         <div class="heading-img" style="background-image:url('/images/sea_turtle_baby.jpg')"></div>
-        <div class="heading-text" style="top:15%;">
+        <div class="heading-text" style="top:15%; width:100%">
           <h1 style="font-size:7vw;">SEA TURTLE CONSERVATION</h1>
         </div>
     </div>
