added animals and made it responsive

--- a/pages/animals.html
+++ b/pages/animals.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+  <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <title>Herpetarium</title>
+  <title>Animals</title>
 </head>
 
 <body>
@@ -163,7 +165,7 @@
 
   <div id="oceans" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
-    <div class="heading-text">
+    <div class="heading-text" style="top:22%;">
       <h1>ISLANDS AND COASTS</h1>
     </div>
   </div>
@@ -371,6 +373,25 @@
       <img src="/images/basilisk.jpg">
     </div>
   </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Spiny Bush Viper</h2>
+      <h4>Atheris hispida</h4>
+      <p>Range: Central and East Africa</p>
+      <ul>
+        <li>These snakes eat birds, lizards, and small mammals, and hunt by ambushing their prey in the tree tops. 
+          They prefer to wait in the terminal leaves and flowers of smaller trees.</li>
+        <li>Their venom is a potent neurotoxic, which damages internal organs and can be fatal to humans.</li>
+        <li>The snakes are small, growing no longer than 30 inches.</li>
+        <li>Because of their elusiveness and the remoteness of their home range, little is known about their population size or life-span.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/bush_viper.png">
+    </div>
+  </div>
 
   <div id="forests" class="heading_2">
     <div class="heading-img" style="background-image:url('/images/background_snake_purple.jpg')"></div>
@@ -412,6 +433,42 @@
     </div>
     <div class="animal-column">
       <img src="/images/frilled_lizard.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Cottonmouth</h2>
+      <h4>Agkistrodon piscivorus</h4>
+      <p>Range: Southeastern United States</p>
+      <ul>
+        <li>The cottonmouth is a pit viper, and therefore has a facial pit that detects infrared radiation.</li>
+        <li>They use this pit to sense prey, which includes fish, birds, turtles, lizards, and other snakes.</li>
+        <li>The cottonmouth is the most aquatic of the North American venomous snakes, so they often swim when hunting or fleeing predators.</li>
+        <li>Cottonmouths give birth to live young.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/cottonmouth.jpg">
+    </div>
+  </div>
+  <hr class=sep-animals>
+
+  <div class="row animal">
+    <div class="animal-column">
+      <h2>Eastern Tiger Salamander</h2>
+      <h4>Ambystoma tigrinum</h4>
+      <p>Range: Eastern United States</p>
+      <ul>
+        <li>The female salamander attaches her eggs to the bottom of the pond with grass stems and leaves.</li>
+        <li>The salamander larvae are aquatic and have gills, but grow lungs and become terrestrial upon reaching adulthood.</li>
+        <li>The salamanders eat worms, frogs, snails, slugs, and insects.</li>
+        <li>Salamanders can quickly regrow severed limbs.</li>
+      </ul>
+    </div>
+    <div class="animal-column">
+      <img src="/images/tiger_salamander.jpg">
     </div>
   </div>
 
