--- a/pages/education.html
+++ b/pages/education.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />s
     <title>Conservation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css" />
@@ -37,7 +39,7 @@
         <br />
     </div>
 
-    <div class="heading_2" style="height:710px; width:100%;">
+    <div class="conservation-heading">
         <div class="heading-img" style="background-image:url('/images/sea_turtle_baby.jpg')"></div>
         <div class="heading-text" style="top:15%; width:100%">
           <h1 style="font-size:7vw;">SEA TURTLE CONSERVATION</h1>
@@ -45,10 +47,10 @@
     </div>
 
     <div class="row animal">
-        <div class="animal-column" style="line-height:2.3em;">
-          <h2 style="line-height:2.3em;">Why are sea turtles endangered?</h2>
-          <h6 style="line-height:2.3em;">The IUCN has identified five major contributers to sea turtle endangerment:</h6>
-          <ul style="line-height:2.3em;">
+        <div class="conservation-column">
+          <h2>Why are sea turtles endangered?</h2>
+          <h6>The IUCN has identified five major contributers to sea turtle endangerment:</h6>
+          <ul>
             <li><b>Fisheries: </b>Fishing can negatively impact the food web, destroy sea turtle habitats, and kill sea turtles that get entangled in nets.</li>
             <li><b>Hunting: </b>Sea turtles and their eggs are hunted throughout the world.</li>
             <li><b>Development: </b>Development such as seafloor dredging and coastal construction alters and even destroys sea turtle habitats and nesting areas.</li>
@@ -58,21 +60,22 @@
           </ul>
           <p style="font-size:10px;"><i>Sources: Caribbean Conservation Corporation and Todd Steiner, Sea Turtle Restoration Project</i></p>
         </div>
-        <div class="animal-column">
-          <img src="/images/sea_turtle_birds_eye.jpg" style="width:77%">
+        <div class="conservation-column">
+          <img src="/images/sea_turtle_birds_eye.jpg">
         </div>
     </div>
     <hr class=sep-animals>
 
     <div class="row animal">
-        <div class="animal-column">
-            <img src="/images/sea_turtle_baby_2.jpg" style="width:77%">
+        <div class="conservation-column">
+            <img src="/images/sea_turtle_baby_2.jpg">
         </div>
-        <div class="animal-column" style="line-height:2.3em; padding-left:0px; padding-right:60px">
-            <h2 style="line-height:2.3em;">Do Your Part</h2>
-            <h6 style="line-height:2.3em;">Human activity is the main cause of preventable sea turtle deaths. 
+        <div class="conservation-column">
+            <br>
+            <h2>Do Your Part</h2>
+            <h6>Human activity is the main cause of preventable sea turtle deaths. 
                 Here are some things you can do to help protect our flippery friends:</h6>
-            <ul style="line-height:2.3em; padding-left:35px; padding-right:25px;">
+            <ul>
             <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
                 Specific dates and times will be posted on our <a href="schedule.html">Events Page</a>.
             </li>
