--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <title>Herpetarium</title>
@@ -34,7 +36,7 @@
     </div>
   </nav>
 
-  <body>
+  
     <div class="heading" style="background-image: url('/images/background.jpg');">
       <br />
       <h1 id="wordsOnImage" style="text-align: center;">HIGHLAND HERPETARIUM</h1>
@@ -64,7 +66,6 @@
     </div>
     <br />
     <br />
-  </body>
 
   <!--Footer-->
   <footer>
