--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+  <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <title>Herpetarium</title>
+  <title>Schedule and Events</title>
 </head>
 
 <body>
@@ -18,10 +20,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/pages/schedule.html">Visit</a>
         </li>
         <li class="nav-item">
@@ -50,6 +52,7 @@
           <h2>Students: $20</h2>
           <h2>Kids: $15</h2>
         </div>
+        <br> 
         <h2>Sun-Sat 12:00pm-11:30pm</h2>
       </div>
     </div>
