--- a/pages/education.html
+++ b/pages/education.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />s
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Conservation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css" />
@@ -37,6 +37,15 @@
         <br />
         <h1 id="wordsOnImage" style="text-align: center;">CONSERVATION EFFORTS</h1>
         <br />
+    </div>
+
+    <div class="threatened-species">
+        <form>
+            <label>Choose a region</label>
+            <input id="regionInput" type="text" value=""></input><br/>
+            <input id="regionSubmit" type="submit" value="Submit"></input>
+        </form>
+        <div id="threatened"></div>
     </div>
 
     <div class="conservation-heading">
@@ -105,5 +114,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="/pages/conservation.js"></script>  
 </body>
 </html>
