--- a/pages/education.html
+++ b/pages/education.html
@@ -44,7 +44,7 @@
     <h3>Choose a class and a family:</h3>
     <form>
       <label>Class:</label>
-      <select id = "classInput" onchange = "onClassSelection()" >  
+      <select id = "classInput" onChange = "onClassSelection()">  
         <option> ---Choose a class--- </option>  
         <option value="amphibians"> Amphibian </option>  
         <option value="reptiles"> Reptile </option>    
